# open-assembler

./: AUTHORS  ChangeLog  INSTALL  Makefile.in  NEWS  README  configure  configure.ac
Documentation/: L.tarentolae.txt  graph-format.txt  manual.tex  modules.txt
algorithms/: algo.txt  paths.tex
htdocs/: index.html
scripts/: RUN-ALL.sh  build.sh  distribute.sh  doHuman.sh  dumpQuality.rb  extract_results.sh  findSeed.rb  generateRandom-repeats.rb  get_latex_line.sh  keepLargeContigs.rb  pairedInfo.txt  plotGraph.rb  removeEnds.rb  runTests.sh  simulate-454-error-prone.rb  simulate-454.rb  simulate-Solexa.rb  simulate-paired-Illumina.rb  simulate-perfect.rb  trimN.rb
src/: 454_De_Bruijn_De_Novo_Assembler_main.cpp  AnnotationElement.cpp  AnnotationElement.h  BinarySearch.c  BinarySearch.cpp  BinarySearch.h  BinarySearch.s  CoverageDistribution.cpp  CoverageDistribution.h  CustomMap.hpp  DNA.conf  DNA.rb  DeBruijnAssembler.cpp  DeBruijnAssembler.h  De_Bruijn_De_Novo_Assembler_main.cpp  ExtractSequencesFromAFastaFile.cpp  GraphData.cpp  GraphData.h  GraphDataLight.cpp  GraphDataLight.h  Hit.cpp  Hit.h  HitPair.cpp  HitPair.h  INSTALL  LightVertex.cpp  LightVertex.h  LinuxDropCaches.sh  Loader.cpp  Loader.h  Logger.cpp  Logger.h  Logger.hpp  Makefile  Makefile.am  Makefile.in  Merger.cpp  Merger.h  PairedRead.h  RUN-ALL.sh  (+51 more)
tests/: 1000000  1000000-duplicates  10000nt  10000nt-duplicates  3-1000-repeats.fa  3-1000-repeats.fa.fa  800-repeats.fa  800-repeats.fa.fa  Streptococcus-pneumoniae-R6.fasta  UnitTest-4-1000-repeats-1mismatch-every150nt-with-error.fa  UnitTest-4-1000-repeats-1mismatch-every150nt-with-error.fa.fa  UnitTest-4-1000-repeats-1mismatch-every150nt.fa.Info  UnitTest-4-1000-repeats-1mismatch-every150nt.fa.fa  UnitTest-4-1000-repeats-1mismatchEvery250-with-error.fa  UnitTest-4-1000-repeats-1mismatchEvery250-with-error.fa.fa  UnitTest-4-1000-repeats-1mismatchEvery250.fa  UnitTest-4-1000-repeats-1mismatchEvery250.fa.Info  UnitTest-4-1000-repeats-1mismatchEvery250.fa.fa  UnitTest-Short-Reads-36.fa  UnitTest-Short-Reads-36.fa.fa  duplicatedRegion.fa  duplicatedRegion.fa.fa  inspect.sh  kill.sh  parse.rb  print.sh  randomSequence.fa  randomSequence.fa.fa  runTests.sh  sequence-4-perfect-TAC-repeats-error-middle.fa.fa  sequence-4-perfect-TAC-repeats-with-errors.fa.fa  sequence-4-perfect-TAC-repeats.fa  sequence-4-perfect-TAC-repeats.fa.fa  sequence-with-one-trivial-TA-repeat.fa  sequence-with-one-trivial-TA-repeat.fa.fa  sequence-with-one-trivial-TG-repeat.fa  sequence-with-one-trivial-TG-repeat.fa.fa  sequence-with-two-trivial-TA-repeats-error-prone.fa  sequence-with-two-trivial-TA-repeats-error-prone.fa.fa  sequence-with-two-trivial-TA-repeats.fa.fa  (+8 more)
